fix text field on Safari

--- a/web_static/style.css
+++ b/web_static/style.css
@@ -7,6 +7,12 @@ body {
     height: 100%;
     overflow: hidden;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    touch-action: none !important; /* disable pinch-to-zoom, scrolling */
+}
+
+[contenteditable] {
+    -webkit-user-select: text;
+    user-select: text;
 }
 
 :root {
